1. cdh手动安装文档更新hbase的安装和hive的安装 2. Phoenix安装文档更新下载地址